syntax = "proto3";

option csharp_namespace = "Larp.Proto.FifthEdition";

package larp.e5;

enum SkillClass {
    SKILL_CLASS_UNAVAILABLE = 0;
    SKILL_CLASS_FREE = 1;
    SKILL_CLASS_MINOR = 2;
    SKILL_CLASS_STANDARD = 3;
    SKILL_CLASS_MAJOR = 4;
}

enum SkillPurchasable {
    SKILL_PURCHASABLE_UNAVAILABLE = 0;
    SKILL_PURCHASABLE_ONCE = 1;
    SKILL_PURCHASABLE_MULTIPLE = 2;
}

message SkillDefinition  {
    string name = 1;
    string title = 2;
    SkillClass class = 3;
    SkillPurchasable purchasable = 4;
    optional int32 ranksPerPurchase = 5;
    optional int32 costPerPurchase = 6;
    repeated string iterations = 7;
};